Implement and test day one part one
- [ ] Find top three elves for part two