@@ -11,15 +11,29 @@ import static org.assertj.core.api.Assertions.*;
 public class Day01Test {
 
     @Test
-    public void testPart1(){
+    public void oneElfTwoSnacks(){
         // Given
-        List<String> input = Collections.singletonList("test");
+        List<String> input = List.of("100", "200");
 
         // When
         String result = new Day01().part1(input);
 
         // Then
-        assertThat(result).isEqualTo(input.get(0));
+        assertThat(result).isEqualTo("300");
+    }
+
+    @Test
+    void twoElves() {
+        List<String> input = List.of("200", "", "100");
+        String result = new Day01().part1(input);
+        assertThat(result).isEqualTo("200");
+    }
+
+    @Test
+    void stringsAreSpecial() {
+        assertThat("Mark" == "Mark").isTrue();
+        assertThat("Mark" == new String("Mark")).isFalse();
+        assertThat("Mark".equals(new String("Mark"))).isTrue();
     }
 
     @Test
